learn animation iteration count

--- a/css/animation/animation2.html
+++ b/css/animation/animation2.html
@@ -17,9 +17,10 @@
         height: 200px;
         background-color: skyblue;
         animation-name: move-right;
-        animation-duration: 10s;
-        animation-delay: 2s;
+        animation-duration: 5s;
+        /* animation-delay: 2s; */
         position: absolute;
+        animation-iteration-count: 2;
       }
 
       @keyframes move-right {
