--- a/css/animation/animation2.html
+++ b/css/animation/animation2.html
@@ -20,7 +20,8 @@
         animation-duration: 5s;
         /* animation-delay: 2s; */
         position: absolute;
-        animation-iteration-count: 2;
+        animation-iteration-count: infinite;
+        animation-direction: alternate-reverse;
       }
 
       @keyframes move-right {
