--- a/css/animation/animation3.html
+++ b/css/animation/animation3.html
@@ -26,6 +26,7 @@
         animation-duration: 1s;
         animation-fill-mode: forwards;
         animation-delay: 1s;
+        animation-timing-function: cubic-bezier(1,-0.42,.86,.12);
       }
 
       .right-box {
